--- a/blog_admin/src/main/resources/application.yml
+++ b/blog_admin/src/main/resources/application.yml
@@ -3,8 +3,8 @@ server:
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/sg_blog?characterEncoding=utf-8&serverTimezone=Asia/Shanghai
-    username: root
-    password: zhxbb20010821
+    username: 
+    password: 
     driver-class-name: com.mysql.cj.jdbc.Driver
   servlet:
     multipart:
