--- a/blog_blog/src/main/resources/application.yml
+++ b/blog_blog/src/main/resources/application.yml
@@ -3,8 +3,8 @@ server:
 spring:
   datasource:
     url: jdbc:mysql://localhost:3306/sg_blog?characterEncoding=utf-8&serverTimezone=Asia/Shanghai
-    username: root
-    password: zhxbb20010821
+    username: 
+    password: 
     driver-class-name: com.mysql.cj.jdbc.Driver
   servlet:
     multipart:
@@ -12,9 +12,9 @@ spring:
       max-request-size: 5MB
 
   redis:
-    host: 43.142.73.143
-    port: 6379
-    password: zhxbb20010821
+    host: 
+    port: 
+    password: 
     database: 0
 mybatis-plus:
   configuration:
@@ -28,6 +28,6 @@ mybatis-plus:
       id-type: auto
 
 oss:
-  accessKey: GzdJ1cIdKg1yq-Zie9AdfwshtydPyKcBcqrrUXDx
-  secretKey: TujWGflwjxKTZOaJQXFXXhtNNOY9eQ0gueELlIqD
+  accessKey: 
+  secretKey: 
   bucket: zhen-test
